@@ -44,7 +44,7 @@ check(wistream& stream, const wstring& str, unsigned nchunks, wchar_t delim)
 {
   bool test __attribute__((unused)) = true;
 
-  wchar_t buf[1000000];
+  static wchar_t buf[1000000];
   wstring::size_type index = 0, index_new = 0;
   unsigned n = 0;
 
